--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
 
 </head>
 <body>
-
+<div class="box">
+	
 	Username :<input type="text" name="username" id="username" /> 
 	Password :<input type="password" name="formPassword" id="password" /> 
 	<input type="submit" value="Submit" class="submitButton" onclick="myfun()" /> 
+</div>
 	<div id="ab" >
 		<p>Wrong user name and password</p>
 	</div>
