--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
 <link rel="stylesheet" type="text/css" href="./style.css">
 <script src="./script.js"></script>
-<script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.11.3.min.js"></script>
-
+<!-- <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.11.3.min.js"></script> -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 </head>
 <body>
 <div class="box">
