--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
   </div><!-- /.container-fluid -->
 </nav>
 <div class="row">
-  <div class="col-xs-8 "></div>
-  <div class="col-xs-4 ">
+  <div class="col-md-8"></div>
+  <div class="col-xs-12 col-sm-8 col-md-4">
   
   
 <!-- <div class="btn-group" role="group" aria-label="...">
