image source is changed

--- a/home.html
+++ b/home.html
@@ -71,7 +71,7 @@
    		<!-- <div class="row"> -->
    			<!-- <div class="col-md-12 "> -->
    			<div class "thumbnail">
-	      		<img src="../images/refrigerated_truck_frigo.jpg" alt="Responsive image">
+	      		<img src="./refrigerated_truck_frigo.jpg" alt="Responsive image">
 	      		<div class="caption">
 	        		<h3>Refrigerated truck/ frigo</h3>
 	        		<p>Refrigerated semi-trailer Used for the transportation of the most perishable goods with special storage conditions: from +25 0C to -250C.</p>
@@ -79,7 +79,7 @@
       			</div>
     		<!-- </div> -->
     		<!-- <div class="col-md-12 "> -->
-	      		<img src="../images/refrigerated_truck_frigo.jpg" alt="Responsive image">
+	      		<img src="./refrigerated_truck_frigo.jpg" alt="Responsive image">
 	      		<div class="caption">
 	        		<h3>Refrigerated truck/ frigo</h3>
 	        		<p>Refrigerated semi-trailer Used for the transportation of the most perishable goods with special storage conditions: from +25 0C to -250C.</p>
@@ -94,7 +94,7 @@
    		<!-- <div class="row"> -->
    			<!-- <div class="col-md-12 "> -->
    			<div class "thumbnail">
-	      		<img src="../images/refrigerated_truck_frigo.jpg" alt="Responsive image">
+	      		<img src="./refrigerated_truck_frigo.jpg" alt="Responsive image">
 	      		<div class="caption">
 	        		<h3>Refrigerated truck/ frigo</h3>
 	        		<p>Refrigerated semi-trailer Used for the transportation of the most perishable goods with special storage conditions: from +25 0C to -250C.</p>
@@ -102,7 +102,7 @@
       			</div>
     		<!-- </div> -->
     		<!-- <div class="col-md-12 "> -->
-	      		<img src="../images/refrigerated_truck_frigo.jpg" alt="Responsive image">
+	      		<img src="./refrigerated_truck_frigo.jpg" alt="Responsive image">
 	      		<div class="caption">
 	        		<h3>Refrigerated truck/ frigo</h3>
 	        		<p>Refrigerated semi-trailer Used for the transportation of the most perishable goods with special storage conditions: from +25 0C to -250C.</p>
@@ -117,7 +117,7 @@
    		<!-- <div class="row"> -->
    			<!-- <div class="col-md-12 "> -->
    			<div class "thumbnail">
-	      		<img src="../images/refrigerated_truck_frigo.jpg" alt="Responsive image">
+	      		<img src="./refrigerated_truck_frigo.jpg" alt="Responsive image">
 	      		<div class="caption">
 	        		<h3>Refrigerated truck/ frigo</h3>
 	        		<p>Refrigerated semi-trailer Used for the transportation of the most perishable goods with special storage conditions: from +25 0C to -250C.</p>
@@ -125,7 +125,7 @@
       			</div>
     		<!-- </div> -->
     		<!-- <div class="col-md-12 "> -->
-	      		<img src="../images/refrigerated_truck_frigo.jpg" alt="Responsive image">
+	      		<img src="./refrigerated_truck_frigo.jpg" alt="Responsive image">
 	      		<div class="caption">
 	        		<h3>Refrigerated truck/ frigo</h3>
 	        		<p>Refrigerated semi-trailer Used for the transportation of the most perishable goods with special storage conditions: from +25 0C to -250C.</p>
