--- a/signin.html
+++ b/signin.html
@@ -28,7 +28,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <button type="button" class="btn btn-default navbar-btn" onclick="window.location.href="'newlogin.html'">Sign Up</button>
+        <button type="button" class="btn btn-default navbar-btn" onclick="window.location.href="'./index.html'">Sign Up</button>
         <button type="button" class="btn btn-default navbar-btn">Sign in</button>
         
       </ul>
